# flip7

./: .gitignore  CLAUDE.md  README.md  RULES.md  main.py  main_curses.py  pyproject.toml
.claude/: settings.json
src/: action_handler.py  card.py  curses_ui.py  deck.py  example_hello_world.py  game_state.py  gameplay_ui.py  player_hand.py  scoring.py  strategy.py
tests/: action_handler_test.py  card_test.py  deck_test.py  example_test.py  game_state_test.py  gameplay_ui_test.py  player_hand_test.py  scoring_test.py  strategy_test.py
